--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sub"]
 	path = sub
 	url = https://github.com/deepeshj/sub.git
+[submodule "third/leveldb"]
+	path = third/leveldb
+	url = https://github.com/google/leveldb.git
